# Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/stb/: CMakeLists.txt
src/: application.cpp  camera.cpp  object.cpp  renderResult.cpp  renderer.cpp  scene.cpp  shader.cpp  transform.cpp
src/imgui/: guiFileDialog.cpp
src/include/: application.h  camera.h  commands.h  ext.h  object.h  renderResult.h  renderer.h  result.h  scene.h  shader.h  transform.h  types.h
src/include/imgui/: guiFileDialog.h
test/: test.cpp
test/gui_example/: main.cpp
test/minimal_example/: main.cpp  out.tga
